# deploy_loongarch

./: .gitattributes  2csv.py  README.md  evaluation_af_detection.py  qtflite.py  send_serial.py  tftrain.py
4excutorch/: 2pte.py  executor_runner.cpp  inputs_portable.cpp  inputs_portable.h
data/1/: S66-N-740.txt  S66-N-742.txt  S66-N-746.txt  S66-N-747.txt  S66-N-749.txt  S66-N-750.txt  S66-N-752.txt  S66-N-754.txt  S66-N-755.txt  S66-N-758.txt  S66-N-765.txt  S66-N-766.txt  S66-N-767.txt  S66-N-769.txt  S66-N-770.txt  S66-N-777.txt  S66-N-779.txt  S66-N-780.txt  S66-N-788.txt  S66-N-791.txt  (+6324 more)
data_indices/: final_test_indice.csv
libtorch/: CMakeLists.txt  loongarch64-toolchain.cmake  quantization.py  run_model.cpp
records/: seg_stat_20240601140232.txt  seg_stat_20240601142321.txt  seg_stat_20240601142816.txt  seg_stat_20240601143041.txt  seg_stat_20240601155109.txt  seg_stat_20240601155131.txt  seg_stat_20240601160702.txt  seg_stat_20240601161712.txt  seg_stat_20240601163152.txt  seg_stat_20240601180200.txt  seg_stat_20240601190651.txt  seg_stat_20240601190959.txt  seg_stat_20240601191154.txt  seg_stat_20240601191551.txt  seg_stat_20240601192226.txt  seg_stat_20240601193131.txt  seg_stat_20240601194413.txt  seg_stat_20240601200043.txt  seg_stat_20240601201059.txt  seg_stat_20240601201732.txt  seg_stat_20240601211426.txt  seg_stat_20240601212313.txt  seg_stat_20240601214057.txt  seg_stat_20240606182804.txt  seg_stat_20240608095505.txt  seg_stat_20240608101837.txt  seg_stat_20240608104202.txt  seg_stat_20240608110353.txt  seg_stat_20240608113831.txt  seg_stat_20240608200553.txt  seg_stat_20240608204649.txt  seg_stat_20240608232828.txt
(+6260 files in other folders)
